2005-05-28  Eli Zaretskii  <eliz@gnu.org>

	* configure.in: Add snprintf and vsnprintf to AC_CHECK_DECLS.
	* config.in, configure: Regenerate.

2005-05-26  Mark Kettenis  <kettenis@gnu.org>
            Maciej W. Rozycki  <macro@linux-mips.org>

	* elfxx-mips.c (_bfd_mips_elf_section_processing): Warn and
	stop processing of options if one of invalid size is
	encountered.
	(_bfd_mips_elf_section_from_shdr): Likewise.
	(_bfd_mips_elf_fake_sections): Reset the type of empty special
	sections.

2005-05-26  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (struct alpha_elf_link_hash_entry): Remove
	plt_old_section, plt_old_value.
	(elf64_alpha_adjust_dynamic_symbol): Don't set it.
	(elf64_alpha_size_plt_section_1): Don't use it.

2005-05-26  Jakub Jelinek  <jakub@redhat.com>

	* elfcode.h (elf_object_p): Fail if e_shoff != 0, e_shnum == 0 and
	first shdr has sh_size == 0.  Fail if e_shnum is large to cause
	arithmetic overflow when allocating the i_shdr array.
	Sanity check sh_link and sh_info fields.  Fix e_shstrndx sanity check.

2005-05-25  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c: Update all function definitions to ISO C.  Remove
	all function prototypes; rearrange functions into def-use order.

2005-05-25  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (elf64_alpha_merge_gots): Fix gotent iteration
	in the presence of deleting elements.
	(elf64_alpha_size_got_sections): Zero dead got section size.

2005-05-23  Fred Fish  <fnf@specifixinc.com>

	* dwarf2.c (struct dwarf2_debug): Add inliner_chain member.
	(struct funcinfo): Add caller_func, caller_file, caller_line.
	tag, and nesting_level members.
	(lookup_address_in_function_table): Change first passed parameter
	from "struct funcinfo *" to "struct comp_unit *".
	(lookup_address_in_function_table): Dereference unit to find function
	table.
	(lookup_address_in_function_table): Traverse the function list to
	create a chain of inlined functions back to the first non inlined
	function.